# dx8-to-gles11

./: .gitignore  AGENTS.md  CMakeLists.txt  COVERAGE.md  README.md  THRUPUT.md
examples/: replay_runtime.c
examples/runtime/: replay_runtime.c
include/: dx8asm_parser.h  dx8gles11.h  lf_queue.h  minithread.h  preprocess.h  runtime_pipeline.h  utils.h
include/EGL/: egl.h  eglext.h  eglplatform.h
include/GLES/: egl.h  gl.h  glext.h  glplatform.h
lib/min-dx8-sdk/: d3d8.h  d3d8caps.h  d3d8types.h  d3dx8core.h  d3dx8effect.h  d3dx8math.h  d3dx8mesh.h  d3dx8shape.h  d3dx8tex.h  dinput.h  dxfile.h
lib/min-dx8-sdk/extra/: basetsd.h  d3d.h  d3dxmath.h  ddraw.h  dsound.h
src/: dx8_to_gles11.c  dx8asm_parser.c  lf_queue.c  minithread.c  preprocess.c  runtime_pipeline.c  utils.c
tests/: CMakeLists.txt  pp_alloc_fail.c  test_compile.c  test_compile_limits.c  test_compile_string.c  test_missing_include.c  test_parse_error.c  test_pipeline.c  test_preprocess.c
tests/expected/: add.txt  cnd.txt  compile_string_ps.txt  compile_string_vs.txt  dp3_matrix.txt  matrix_ops.txt  max_min.txt  motion_blur_vs.txt  mov_tex.txt  mul_const.txt  ps13_ops.txt  river_water_ps.txt  terrain_ps.txt  tex_matrix.txt  tex_ops.txt  water_reflection_ps.txt  water_trapezoid_ps.txt
tests/fixtures/: add.asm  basic.asm  cnd.asm  compile_string_ps.asm  compile_string_vs.asm  dp3_matrix.asm  invalid_const.asm  invalid_instr.asm  matrix_ops.asm  max_min.asm  missing_inc.asm  motion_blur_vs.asm  mov_tex.asm  mul_const.asm  ps13_ops.asm  river_water_ps.asm  root.asm  terrain_ps.asm  tex_matrix.asm  tex_ops.asm  water_reflection_ps.asm  water_trapezoid_ps.asm
tests/fixtures/cs_ps/: level1.inc  ops.inc
tests/fixtures/cs_ps/level2/: extra.inc
tests/fixtures/cs_vs/: a.inc  b.inc
tests/fixtures/cs_vs/nested/: c.inc
tests/fixtures/dir1/: a.inc
tools/: bench_tests.c  bench_translate.c  gen_thruput.py  usage_coverage.py
